Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ trigger:
 
 stages:
   - stage: InstallDependencies
-    displayName: "Install Node and Yarn Dependencies"
+    #displayName: "Install Node and Yarn Dependencies"
     jobs:
       - job: Install
         pool:
