--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,10 +33,14 @@ stages:
         pool:
           name: Default
         steps:
-          - task: Gradle@2
+
+         ## - task: Gradle@2
+          - task: Gradle@3
             inputs:
-              workingDirectory: 'android'
-              gradleWrapperFile: 'android/gradlew'
+             ## workingDirectory: 'android'
+              workingDirectory: 'node_modules/react-native/template/android'
+             ## gradleWrapperFile: 'android/gradlew'
+              gradleWrapperFile: 'node_modules/react-native/template/android/gradlew'
               gradleOptions: '-Xmx3072m'
               tasks: 'assembleRelease'
             displayName: 'Assemble Android APK'
