--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ stages:
             inputs:
               workingDirectory: 'android'
               ##workingDirectory: 'node_modules/react-native/template/android'
-              gradleWrapperFile: 'android/gradlew'
+              ##gradleWrapperFile: 'android/gradlew'
               ##gradleWrapperFile: 'node_modules/react-native/template/android/gradlew'
               gradleOptions: '-Xmx3072m'
               tasks: 'assembleRelease'
