--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,15 +35,25 @@ stages:
         steps:
 
          ## - task: Gradle@2
-          - task: Gradle@3
+          # - task: Gradle@3
+          #   inputs:
+          #     workingDirectory: 'android'
+          #     ##workingDirectory: 'node_modules/react-native/template/android'
+          #     ##gradleWrapperFile: 'android/gradlew'
+          #     ##gradleWrapperFile: 'node_modules/react-native/template/android/gradlew'
+          #     gradleOptions: '-Xmx3072m'
+          #     tasks: 'assembleRelease'
+          #   displayName: 'Assemble Android APK'
+
+    # Corrected Gradle task
+          - task: Gradle@3  # Use the latest Gradle version
             inputs:
-              workingDirectory: 'android'
-              ##workingDirectory: 'node_modules/react-native/template/android'
-              ##gradleWrapperFile: 'android/gradlew'
-              ##gradleWrapperFile: 'node_modules/react-native/template/android/gradlew'
+              workingDirectory: '$(Build.SourcesDirectory)/android'  # Specify the relative path to the android folder
+              gradleWrapperFile: '$(Build.SourcesDirectory)/android/gradlew'  # Full relative path to gradlew
               gradleOptions: '-Xmx3072m'
               tasks: 'assembleRelease'
             displayName: 'Assemble Android APK'
+
 
           - task: CopyFiles@2
             inputs:
