--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ stages:
       - job: AndroidBuild
         pool:
           name: Default
-        steps:
+        ##steps:
 
          ## - task: Gradle@2
           # - task: Gradle@3
@@ -45,27 +45,18 @@ stages:
           #     tasks: 'assembleRelease'
           #   displayName: 'Assemble Android APK'
 
-    # Corrected Gradle task
-          # - task: Gradle@3  # Use the latest Gradle version
+
+          # - task: CopyFiles@2
           #   inputs:
-          #     workingDirectory: '$(Build.SourcesDirectory)/android'  # Specify the relative path to the android folder
-          #     gradleWrapperFile: '$(Build.SourcesDirectory)/android/gradlew'  # Full relative path to gradlew
-          #     gradleOptions: '-Xmx3072m'
-          #     tasks: 'assembleRelease'
-          #   displayName: 'Assemble Android APK'
+          #     contents: '**/*.apk'
+          #     targetFolder: '$(Build.ArtifactStagingDirectory)/apk'
+          #   displayName: 'Copy APKs to staging'
 
-
-          - task: CopyFiles@2
-            inputs:
-              contents: '**/*.apk'
-              targetFolder: '$(Build.ArtifactStagingDirectory)/apk'
-            displayName: 'Copy APKs to staging'
-
-          - task: PublishBuildArtifacts@1
-            inputs:
-              pathToPublish: '$(Build.ArtifactStagingDirectory)/apk'
-              artifactName: 'Android_APK'
-            displayName: 'Publish APK artifact'
+          # - task: PublishBuildArtifacts@1
+          #   inputs:
+          #     pathToPublish: '$(Build.ArtifactStagingDirectory)/apk'
+          #     artifactName: 'Android_APK'
+          #   displayName: 'Publish APK artifact'
 
   # - stage: BuildiOS
   #   displayName: "Build iOS App"
