--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,77 +7,56 @@ trigger:
   branches:
     include:
       - main
+
 stages:
-  - stage: DiagnoseProject
+  - stage: InstallDependencies
     jobs:
-      - job: InspectFiles
+      - job: Install
         pool:
           name: Default
         steps:
+          - task: NodeTool@0
+            inputs:
+              versionSpec: '18.x'
+            displayName: 'Install Node.js'
+
           - script: |
-              echo "Current working directory:"
-              cd
-              echo "Listing root directory contents:"
-              dir
-              echo "Searching for gradlew files:"
-              dir /s /b gradlew
-              echo "Searching for android directory:"
-              dir /s /b | findstr /i "\\android$"
-            displayName: 'Inspect project structure'
-          - script: |
-              echo "Checking React Native project structure:"
-              if exist package.json (
-                echo "This appears to be a React Native project root"
-                type package.json | findstr "react-native"
-              )
-            displayName: 'Verify React Native project'
-  - stage: SetupAndroid
-    dependsOn: DiagnoseProject
+              npm install -g yarn
+              yarn install
+            displayName: 'Install yarn dependencies'
+
+  - stage: BuildAndroid
+    displayName: "Build Android App"
+    dependsOn: InstallDependencies
     jobs:
-      - job: PrepareAndroid
+      - job: AndroidBuild
         pool:
           name: Default
-        steps:
-          - script: |
-              echo "Creating Android directory if it doesn't exist:"
-              if not exist android (
-                echo "Android directory not found, creating it..."
-                mkdir android
-              )
-              
-              echo "Checking if this is a React Native project:"
-              if exist package.json (
-                echo "Attempting to create/regenerate Android project:"
-                npx react-native init temp_project --template react-native@latest
-                echo "Copying gradlew files from template:"
-                xcopy /E /I /Y temp_project\android\gradlew android\
-                xcopy /E /I /Y temp_project\android\gradle android\gradle\
-                xcopy /E /I /Y temp_project\android\gradlew.bat android\
-                rd /s /q temp_project
-              )
-              
-              echo "Checking Android directory after setup:"
-              if exist android (
-                cd android
-                dir
-              )
-            displayName: 'Setup Android build environment'
-            continueOnError: true
-          - script: |
-              echo "Attempting to generate Gradle wrapper directly:"
-              cd android
-              gradle wrapper
-            displayName: 'Generate Gradle wrapper'
-            continueOnError: true
-          - script: |
-              echo "Final check for gradlew:"
-              dir /s /b gradlew
-              if exist android\gradlew (
-                echo "gradlew found in android directory"
-              ) else (
-                echo "gradlew still not found!"
-              )
-            displayName: 'Verify gradlew existence'
+        ##steps:
+
+         ## - task: Gradle@2
+          # - task: Gradle@3
+          #   inputs:
+          #     workingDirectory: 'android'
+          #     ##workingDirectory: 'node_modules/react-native/template/android'
+          #     ##gradleWrapperFile: 'android/gradlew'
+          #     ##gradleWrapperFile: 'node_modules/react-native/template/android/gradlew'
+          #     gradleOptions: '-Xmx3072m'
+          #     tasks: 'assembleRelease'
+          #   displayName: 'Assemble Android APK'
+
+
+          # - task: CopyFiles@2
+          #   inputs:
+          #     contents: '**/*.apk'
+          #     targetFolder: '$(Build.ArtifactStagingDirectory)/apk'
+          #   displayName: 'Copy APKs to staging'
+
+          # - task: PublishBuildArtifacts@1
+          #   inputs:
+          #     pathToPublish: '$(Build.ArtifactStagingDirectory)/apk'
+          #     artifactName: 'Android_APK'
+          #   displayName: 'Publish APK artifact'
 
   # - stage: BuildiOS
   #   displayName: "Build iOS App"
